<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="pref_key_sortby">sort_by_setting</string>

    <string name="loading_message">Loading movies…</string>
    <string name="title_activity_movie_detail">Movie details</string>
    <string name="titleTextView">-</string>
    <string name="vote_count">-</string>
    <string name="vote_count_if_any">(%1$d)</string>
    <string name="overviewTitle">Overview</string>
    <string name="overviewDetail">No overview available</string>
    <string name="movieYearDetail">%1$d</string>
    <string name="defaultVoteAverage">-</string>
    <string name="starImageContentDesc">A star to illustrate average votes</string>
    <string name="posterImageInGridContentDesc">The poster image in gridview</string>
    <string name="error_title">Oops…</string>
    <string name="connection_error_message">Popular Movies could not connect to the server. Please check your connection and try again.</string>
    <string name="bug_report_message">If you think the problem is not due to your connection, please report the issue  and we will respond as soon as possible.</string>
    <string name="try_again">Try again</string>
    <string name="bug_report">Report bug</string>
    <string name="add_favorite">+ Favorites</string>
    <string name="remove_favorite">- Favorites</string>
    <string name="add_favorite_msg">Added to favorites</string>
    <string name="remove_favorite_msg">Removed from favorites</string>
    <string name="no_favorites">There is no recorded favorite.</string>
    <string name="trailers"><![CDATA[Trailers & Videos]]></string>
    <string name="no_trailer_title">No title</string>
    <string name="video_not_available">No video available</string>
    <string name="loading">Loading…</string>
    <string name="more_reviews">More reviews…</string>
    <string name="no_review">No review available</string>
    <string name="movie_poster_image_content_description">Movie poster</string>
    <string name="reviews">Reviews</string>
    <string name="select_movie">Please select a movie</string>
    <string name="loading_videos_message">Loading videos…</string>
    <string name="loading_reviews_message">Loading reviews…</string>
    <string name="connection_problem">Oops… Could not connect. Please check your Internet connection and try again.</string>
    <string name="movie_poster_image_content_desc">Movie poster image</string>
</resources>
