<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_centerHorizontal="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp"
    tools:context="be.julot.popularmovies.MovieDetailActivityFragment">

    <ImageView
        android:layout_width="185dp"
        android:layout_height="277dp"
        android:id="@+id/posterImageDetail"
        android:src="@drawable/blank"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="61dp"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleTextView"
        android:id="@+id/titleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:rating="2.5"
        android:layout_alignBottom="@+id/posterImageDetail"
        android:layout_toRightOf="@+id/posterImageDetail"
        android:layout_toEndOf="@+id/posterImageDetail"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/vote_count"
        android:id="@+id/voteCountTextView"
        android:layout_alignTop="@+id/ratingBar"
        android:layout_toRightOf="@+id/ratingBar"
        android:layout_toEndOf="@+id/ratingBar"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/movieYearDetail"
        android:id="@+id/yearTextView"
        android:layout_alignTop="@+id/posterImageDetail"
        android:layout_alignLeft="@+id/ratingBar"
        android:layout_alignStart="@+id/ratingBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/overviewTitle"
        android:id="@+id/overviewTitleTextView"
        android:layout_below="@+id/posterImageDetail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/overviewDetail"
        android:id="@+id/overviewDetailTextView"
        android:layout_below="@+id/overviewTitleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_favorite"
            android:id="@+id/button_Favorite"
            android:background="#04ff39"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/yearTextView"
            android:layout_toEndOf="@+id/yearTextView"
            android:onClick="updateFavorites"/>

    </RelativeLayout>

</ScrollView>